# memex-browser

./: .gitignore  Cargo.toml
assets/: Info.plist  helper_Info.plist
crates/memex-app/: Cargo.toml
crates/memex-app/src/: foundation.rs  main.rs  system.rs  ui_consts.rs  window.rs  workspace_list.rs
crates/memex-app/src/platform_impl/: mac.rs
crates/memex-app/src/ui/: app.rs  browser_window.rs  consts.rs  controller.rs  exproler.rs  mod.rs  start.rs  tab_bar.rs  title_bar.rs  workbench.rs  workspace_list.rs
crates/memex-backend/: Cargo.toml
crates/memex-backend/src/: context.rs  data.rs  global_state.rs  helper.rs  layout.rs  lib.rs  tab.rs  workspace.rs  workspace_list.rs  workspace_manager.rs
crates/memex-backend/src/os/: file_system.rs
crates/memex-backend/src/platform_impl/: macos.rs
crates/memex-cef/: Cargo.toml
crates/memex-cef-helper/: Cargo.toml
crates/memex-cef-helper/src/: main.rs
crates/memex-cef/src/: bootstrap.rs  browser.rs  browser_context.rs  cef_context.rs  context.rs  event_handler.rs  event_loop.rs  helper.rs  lib.rs  profile.rs  rect.rs  session.rs  webview.rs
crates/memex-cef/src/cef_impl/: app.rs  browser_process_handler.rs  client.rs  display_handler.rs  life_span_handler.rs  mod.rs  render_process_handler.rs  request_context_handler.rs
crates/memex-cef/src/utils/: rect.rs
crates/memex-core/: Cargo.toml
crates/memex-core/migrations/: 20251212045220_create-tables.sql
crates/memex-core/src/: browser.rs  id.rs  lib.rs  tab.rs  workspace.rs
crates/memex-core/src/db/: mod.rs  tab.rs  workspace.rs
crates/memex-core/src/fs/: mod.rs  path.rs  utils.rs
crates/memex-ui/: Cargo.toml
crates/memex-ui/src/: controller.rs  exproler.rs  main.rs  tab_bar.rs
themes/: adventure.json  alduin.json  ayu.json  catppuccin.json  fahrenheit.json  flexoki.json  gruvbox.json  harper.json  hybrid.json  jellybeans.json  macos-classic.json  matrix.json  mellifluous.json  molokai.json  solarized.json  tokyonight.json
tools/: _lib.py  macbundle.py  macdev.py
