[workspace]
resolver = "3"
members = ["crates/memex-cef", "crates/memex-cef-helper","crates/memex-app", "crates/memex-backend"]

[workspace.dependencies]
memex-cef.path = "crates/memex-cef"
memex-backend.path = "crates/memex-backend"
cef = "141.6.1"
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", default-features = false }
log = "0.4.28"
raw-window-handle = "0.6.2"
anyhow = "1.0"
uuid = "1.18.1"
serde = "1.0"
serde_json = "1.0"
futures = "0.3.31"
futures-lite = "2.6.1"
async-io = "2.6.0"
async-fs = "2.2.0"
async-channel = "2.5.0"
rust-embed = "8.8.0"
gpui = "0.2.2"
gpui-component = "0.3.1"
dirs = "6.0.0"
