[package]
name = "memex-app"
publish = false
edition = "2024"

[dependencies]
memex-backend.workspace = true
memex-cef.workspace = true
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
rust-embed.workspace = true
uuid = { workspace = true, features = ["v4"] }
log.workspace = true
futures-lite.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["NSApplication", "NSResponder"] }
