[package]
name = "memex-backend"
publish = false
edition = "2024"

[dependencies]
memex-cef.workspace = true
uuid = { workspace = true, features = ["v4"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-io.workspace = true
async-fs.workspace = true
futures.workspace = true
futures-lite.workspace = true
raw-window-handle.workspace = true
dirs.workspace = true
log.workspace = true
gpui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["NSApplication", "NSResponder"] }
